examples/bad/MobileLayout.tsx
export function WideTable() {
  return (
    <div style={{ width: 720 }}>
      <table>
        <tbody />
      </table>
    </div>
  );
}
